# You must change these to your own details.
[package]
name = "rust-svelte-template"
description = "Wasm(RUST) + Svelte template using Webpack!"
version = "0.1.0"
authors = ["Sasszem <barath.laszlo.szolnok@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"
[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
default = ["wee_alloc"]

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
js-sys = "0.3"
serde = "1.0.123"
serde_derive = "1.0.102"
serde_json = "1.0.62"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.2", optional = true }

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

# These crates are used for running unit tests.
[dev-dependencies]
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"